Add a VMBridge for Java 11+ (#1076)
Fixes #1076.